Feature: Implementing SEO

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "concurrently": "^5.0.1",
     "node-gyp": "^5.0.7",
-    "node-sass": "^4.13.0"
+    "node-sass": "^4.13.0",
+    "sass": "^1.25.0"
   }
 }
